Update controller and tests.
