# api/swagger/swagger.yaml
@@ -12,7 +12,7 @@ consumes:
 produces:
   - application/json
 paths:
-  /api/my/applications/v1:
+  /api/my/applications/v1.0:
     x-swagger-router-controller: applications
     get:
       description: Returns a list of applications for the customer
@@ -20,7 +20,7 @@ paths:
       parameters:
         - name: x-customer-token
           in: header
-          description: The session token for the customer
+          description: The session token for the customer.
           required: true
           type: string
       responses:
@@ -32,42 +32,104 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+    post:
+      description: Creates a new application for the customer
+      operationId: create
+      parameters:
+        - name: x-customer-token
+          in: header
+          description: The session token for the customer.
+          required: true
+          type: string
+        - name: application
+          description: The application filled out by the customer.
+          in: body
+          schema:
+            $ref: "#/definitions/ApplicationSubmission"
+      responses:
+        "201":
+          description: The customer's application was immediately created and put into an **incomplete** status.
+          schema:
+            $ref: "#/definitions/Application"
+        "202":
+          description: The customer's application was created and put into an **submitted** status.
+          schema:
+            $ref: "#/definitions/Application"
+        "409":
+          description: The customer already has an application of that type that's not in "approved" or "not approved" status.'
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
 
 
 definitions:
-  ApplicationSummary:
+  CommonApplicationInformation:
+    description: Common information for all resources concerning an application.
     required:
-      - id
       - applicationType
-      - status
-      - accountUri
-      - startedOn
+      - amountRequested
     properties:
-        applicationType:
-          type: string
-          description: The human-readable type of application.
-        id:
-          type: number
-          description: The identifier for the application.
-        startedOn:
-          type: string
-          format: date
-          description: The date that the customer started the application.
-        status:
-          type: string
-          description: The status of the application
-          enum:
-            - incomplete
-            - submitted
-            - under review
-            - approved
-            - not approved
-        accountUri:
-          type: string
-          description: The URI of the account if status is "approved".
+      amountRequested:
+        type: number
+        description: The amount of credit requested by the customer.
+      applicationType:
+        type: string
+        description: The human-readable type of application.
+        enum:
+          - auto
+          - home
+          - card
+  ApplicationSubmission:
+    type: object
+    description: The resource a customer submits to create a new application.
+    allOf:
+      - $ref: '#/definitions/CommonApplicationInformation'
+  ApplicationSummary:
+    description: The summary information of an application.
+    allOf:
+      - $ref: '#/definitions/CommonApplicationInformation'
+      - type: object
+        required:
+          - id
+          - status
+          - startedOn
+        properties:
+          id:
+            type: number
+            description: The identifier for the application.
+          startedOn:
+            type: string
+            format: date
+            description: The date that the customer started the application.
+          accountUri:
+            type: string
+            description: The URI of the account if status is "approved".
+          status:
+            type: string
+            description: The status of the application
+            enum:
+              - incomplete
+              - submitted
+              - under review
+              - approved
+              - not approved
+  Application:
+    description: A customer's application for a line of credit.
+    allOf:
+      - $ref: '#/definitions/ApplicationSummary'
+      - type: object
+        properties:
+          commentary:
+            type: array
+            items:
+              type: string
   ApplicationSummaryListResponse:
+    type: object
     required:
       - applications
     properties:
